--- a/res/layout/act_recording.xml
+++ b/res/layout/act_recording.xml
@@ -87,7 +87,7 @@
         android:textOn="Rec" />
 
     <TextView
-        android:id="@+id/accActivityDetailText"
+        android:id="@+id/accActDetailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/recordingToggle"
