--- a/res/layout/act_recognition.xml
+++ b/res/layout/act_recognition.xml
@@ -12,16 +12,8 @@
         android:layout_height="240dp"
    
         />
-
-    <TextView
-        android:id="@+id/statusText"
-         android:textSize="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pPlot"
-        android:text="Status text 1"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black" />
+    
+    
 
     <Button
         android:id="@+id/prevButton"
@@ -53,15 +45,74 @@
         android:onClick="addGNBC"
         android:text="Add" />
 
-    <TextView
-        android:id="@+id/statusText2"
+    <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/statusText"
-        android:layout_alignBottom="@+id/statusText"
+        android:layout_above="@+id/nextButton"
+        android:layout_alignLeft="@+id/addButton"
         android:layout_alignParentRight="true"
-        android:text="Status text 2"
+        android:layout_below="@+id/historyLabel" >
+        
+       <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+        <TextView
+            android:id="@+id/statusText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/black"
+            android:textSize="10dp" />
+        
+    </LinearLayout>
+        
+        
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/historyLabel"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/pPlot"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/scrollView1"
+        android:text="Classification History:"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="12dp" />
+
+    <TextView
+        android:id="@+id/statusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TextView01"
+        android:layout_alignTop="@+id/scrollView1"
+        android:layout_toLeftOf="@+id/scrollView1"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black"
+        android:textSize="10dp" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/statusText"
+        android:layout_alignParentLeft="true"
+        android:text="Classification result:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/clearButton"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/nextButton"
+        android:onClick="clearClassificationResults"
+        android:text="Clear" />
 
 </RelativeLayout>
