--- a/res/layout/act_recognition.xml
+++ b/res/layout/act_recognition.xml
@@ -132,4 +132,28 @@
         android:layout_alignLeft="@+id/addButton"
         android:text="Send results to cloud" />
 
+    <EditText
+        android:id="@+id/useridEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/sendToServerCheckbox"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/scrollView1"
+        android:ems="10"
+        android:hint="userid"
+        android:inputType="number"
+        android:text="1337" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText1"
+        android:layout_alignParentLeft="true"
+        android:text="Send as:"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </RelativeLayout>
