--- a/res/layout/act_recording.xml
+++ b/res/layout/act_recording.xml
@@ -233,12 +233,11 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/constantIdentyfyingCheckbox"
         android:layout_alignLeft="@+id/constantIdentyfyingCheckbox"
-        android:layout_marginTop="-10dp"
         android:layout_marginBottom="-5dp"
+        android:layout_marginTop="-10dp"
+        android:checked="true"
         android:text="Use half size samples"
         android:textSize="11dp" />
-    
-    
     
     <CheckBox
         android:id="@+id/constantIdentyfyingCheckbox"
