--- a/res/layout/act_recording.xml
+++ b/res/layout/act_recording.xml
@@ -244,7 +244,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/previousAccActivityButton"
         android:layout_below="@+id/constantIdentyfyingCheckbox"
-        android:text="Inherit type! when constantly recording"
+        android:text="Inherit type when constantly recording"
         android:textSize="11dp" />
 
     <CheckBox
